--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,20 @@
 
     <fragment
         android:id="@+id/discoverMoviesFragment"
-        android:name="com.challenge.themoviedb.presentation.ui.DiscoverMoviesFragment"
-        tools:layout="@layout/fragment_discover_movies"/>
+        android:name="com.challenge.themoviedb.presentation.ui.feed.DiscoverMoviesFragment"
+        tools:layout="@layout/fragment_discover_movies">
+        <action
+            android:id="@+id/action_go_to_movie_detail"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.challenge.themoviedb.presentation.ui.detail.MovieDetailFragment"
+        tools:layout="@layout/fragment_movie_detail">
+        <argument
+            android:name="movieId"
+            app:argType="integer" />
+    </fragment>
 
 </navigation>
